deploy: 1d853c88a7c81982e03dc2b2a4d695da5e4177d1

--- a/running/eval.html
+++ b/running/eval.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>gRPC - Dolos</title>
+        <title>Eval - Dolos</title>
 
 
         <!-- Custom HTML head -->
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../installation/index.html"><strong aria-hidden="true">2.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../installation/binary_release.html"><strong aria-hidden="true">2.1.</strong> Binary Release</a></li><li class="chapter-item expanded "><a href="../installation/from_source.html"><strong aria-hidden="true">2.2.</strong> From Source</a></li><li class="chapter-item expanded "><a href="../installation/docker.html"><strong aria-hidden="true">2.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="../installation/kubernetes.html"><strong aria-hidden="true">2.4.</strong> Kubernetes</a></li></ol></li><li class="chapter-item expanded "><a href="../configuration/index.html"><strong aria-hidden="true">3.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../configuration/upstream.html"><strong aria-hidden="true">3.1.</strong> Upstream</a></li><li class="chapter-item expanded "><a href="../configuration/rolldb.html"><strong aria-hidden="true">3.2.</strong> RollDB</a></li><li class="chapter-item expanded "><a href="../configuration/serve.html"><strong aria-hidden="true">3.3.</strong> Serve</a></li><li class="chapter-item expanded "><a href="../configuration/byron.html"><strong aria-hidden="true">3.4.</strong> Byron</a></li><li class="chapter-item expanded "><a href="../configuration/logging.html"><strong aria-hidden="true">3.5.</strong> Logging</a></li><li class="chapter-item expanded "><a href="../configuration/examples.html"><strong aria-hidden="true">3.6.</strong> Examples</a></li></ol></li><li class="chapter-item expanded "><a href="../running/index.html"><strong aria-hidden="true">4.</strong> Running</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../running/sync.html"><strong aria-hidden="true">4.1.</strong> Sync</a></li><li class="chapter-item expanded "><a href="../running/serve.html"><strong aria-hidden="true">4.2.</strong> Serve</a></li><li class="chapter-item expanded "><a href="../running/daemon.html"><strong aria-hidden="true">4.3.</strong> Daemon</a></li><li class="chapter-item expanded "><a href="../running/eval.html"><strong aria-hidden="true">4.4.</strong> Eval</a></li></ol></li><li class="chapter-item expanded "><a href="../api/index.html"><strong aria-hidden="true">5.</strong> API</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../api/grpc.html" class="active"><strong aria-hidden="true">5.1.</strong> gRPC</a></li><li class="chapter-item expanded "><a href="../api/ouroboros.html"><strong aria-hidden="true">5.2.</strong> Ouroboros</a></li></ol></li><li class="chapter-item expanded "><a href="../benchmarks/index.html"><strong aria-hidden="true">6.</strong> Benchmarks</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../benchmarks/long_running_june.html"><strong aria-hidden="true">6.1.</strong> Long-running operation - Jun/23</a></li><li class="chapter-item expanded "><a href="../benchmarks/long_running_october.html"><strong aria-hidden="true">6.2.</strong> Long-running operation - Oct/23</a></li><li class="chapter-item expanded "><a href="../benchmarks/byron_phase1_sync.html"><strong aria-hidden="true">6.3.</strong> Byron Phase-1 Sync Footprint</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../installation/index.html"><strong aria-hidden="true">2.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../installation/binary_release.html"><strong aria-hidden="true">2.1.</strong> Binary Release</a></li><li class="chapter-item expanded "><a href="../installation/from_source.html"><strong aria-hidden="true">2.2.</strong> From Source</a></li><li class="chapter-item expanded "><a href="../installation/docker.html"><strong aria-hidden="true">2.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="../installation/kubernetes.html"><strong aria-hidden="true">2.4.</strong> Kubernetes</a></li></ol></li><li class="chapter-item expanded "><a href="../configuration/index.html"><strong aria-hidden="true">3.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../configuration/upstream.html"><strong aria-hidden="true">3.1.</strong> Upstream</a></li><li class="chapter-item expanded "><a href="../configuration/rolldb.html"><strong aria-hidden="true">3.2.</strong> RollDB</a></li><li class="chapter-item expanded "><a href="../configuration/serve.html"><strong aria-hidden="true">3.3.</strong> Serve</a></li><li class="chapter-item expanded "><a href="../configuration/byron.html"><strong aria-hidden="true">3.4.</strong> Byron</a></li><li class="chapter-item expanded "><a href="../configuration/logging.html"><strong aria-hidden="true">3.5.</strong> Logging</a></li><li class="chapter-item expanded "><a href="../configuration/examples.html"><strong aria-hidden="true">3.6.</strong> Examples</a></li></ol></li><li class="chapter-item expanded "><a href="../running/index.html"><strong aria-hidden="true">4.</strong> Running</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../running/sync.html"><strong aria-hidden="true">4.1.</strong> Sync</a></li><li class="chapter-item expanded "><a href="../running/serve.html"><strong aria-hidden="true">4.2.</strong> Serve</a></li><li class="chapter-item expanded "><a href="../running/daemon.html"><strong aria-hidden="true">4.3.</strong> Daemon</a></li><li class="chapter-item expanded "><a href="../running/eval.html" class="active"><strong aria-hidden="true">4.4.</strong> Eval</a></li></ol></li><li class="chapter-item expanded "><a href="../api/index.html"><strong aria-hidden="true">5.</strong> API</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../api/grpc.html"><strong aria-hidden="true">5.1.</strong> gRPC</a></li><li class="chapter-item expanded "><a href="../api/ouroboros.html"><strong aria-hidden="true">5.2.</strong> Ouroboros</a></li></ol></li><li class="chapter-item expanded "><a href="../benchmarks/index.html"><strong aria-hidden="true">6.</strong> Benchmarks</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../benchmarks/long_running_june.html"><strong aria-hidden="true">6.1.</strong> Long-running operation - Jun/23</a></li><li class="chapter-item expanded "><a href="../benchmarks/long_running_october.html"><strong aria-hidden="true">6.2.</strong> Long-running operation - Oct/23</a></li><li class="chapter-item expanded "><a href="../benchmarks/byron_phase1_sync.html"><strong aria-hidden="true">6.3.</strong> Byron Phase-1 Sync Footprint</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -171,38 +171,29 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="grpc"><a class="header" href="#grpc">gRPC</a></h1>
-<h2 id="introduction"><a class="header" href="#introduction">Introduction</a></h2>
+                        <h1 id="eval-command"><a class="header" href="#eval-command"><code>eval</code> command</a></h1>
+<p>The <code>eval</code> is an utility for evaluating transactions. It takes tx data from an external source and uses the current ledger state to evaluate phase-1 validation rules.</p>
+<h2 id="usage"><a class="header" href="#usage">Usage</a></h2>
+<p>To execute the evaluation, run the following command from your terminal:</p>
+<pre><code class="language-bash">dolos eval --file &lt;FILE&gt; --era &lt;ERA&gt; --magic &lt;MAGIC&gt; --slot &lt;SLOT&gt;
+</code></pre>
+<p>The args should be interpreted as:</p>
 <ul>
-<li>Dolos exposes a gRPC endpoint allowing clients to query data</li>
-<li>The endpoint adheres to the UTxO RPC interface definition found in https://utxorpc.org</li>
-<li>The current implemented module is the <code>Sync</code> module that allows clients to sync with the state of the chain stored by Dolos</li>
-<li>Dolos endpoint also supports gRPC-web, a variant of gRPC that can be used directly from browsers</li>
-</ul>
-<h2 id="connecting-to-the-server"><a class="header" href="#connecting-to-the-server">Connecting to the server</a></h2>
-<ul>
-<li>Once started, the server exposes TCP port</li>
-<li>The default port number is <code>50051</code>, but can be changed via configuration</li>
-<li>This port accepts http/2 connections following the standard gRPC mechanism</li>
-<li>The port also accepts http/1.1 connections following the gRPC-web protocol</li>
-<li>Developers can make use of <a href="https://utxorpc.org">UTxO-RPC</a> SDK libraries to interact with the endpoint programmatically</li>
-</ul>
-<h3 id="authentication-mechanism"><a class="header" href="#authentication-mechanism">Authentication Mechanism</a></h3>
-<ul>
-<li>Dolos has a built-in mechanism for authenticating clients using TLS</li>
-<li>By specifying a specific CA authority, Dolos can allows clients that provide a matching certificate</li>
-<li>The CA authority is specified by pointing to the corresponding <code>.pem</code> file through configuration</li>
+<li><code>--file &lt;FILE&gt;</code>: the path to the file containing the tx data as hex-encoded cbor.</li>
+<li><code>--era &lt;ERA&gt;</code>: the id of the era that should be used to interpret the transaction data.</li>
+<li><code>--magic &lt;MAGIC&gt;</code>: the protocol magic of the network.</li>
+<li><code>--slot &lt;SLOT&gt;</code>: the slot that should be used for retrieving protocol parameters.</li>
 </ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../api/index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../running/daemon.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../api/ouroboros.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../api/index.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -212,11 +203,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../api/index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../running/daemon.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../api/ouroboros.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../api/index.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
